# whatdotheyknow-mcp

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  TODO.md  fly.toml  main.py  pyproject.toml  server.json  server.py
.github/workflows/: release.yml
tests/: smoke_test.py
