[project]
name = "whatdotheyknow-mcp"
version = "0.1.0"
description = "WhatDoTheyKnow MCP server — search and read UK FOI requests, authorities, and responses"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "curl-cffi>=0.15.0",
    "fastmcp>=3.2.4",
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
]

[project.scripts]
whatdotheyknow-mcp = "server:main"
